faq section complete

--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
         </div>
     </section>
     <!-- ---------------------------------------- old way vs new way ------------------------------------------>
-    <section id="oldWayNewWay">
+    <section id="oldWayNewWay" class="oldWayStyles">
         <div class="container oldNewContainer">
             <!-- main heading  -->
             <aside class="main_heading">
@@ -694,7 +694,7 @@
             </aside>
         </div>
     </section>
-        <!-- ----------------------------------------- iddentefy 3 bottleck ----------------------------->
+    <!-- ----------------------------------------- iddentefy 3 bottleck ----------------------------->
     <section id="iddentefy3Bottleck" class="">
         <div class="container btn_description_container py-5 d-lg-flex justify-content-lg-end">
             <!-- left right wrapper  -->
@@ -747,6 +747,176 @@
                     </div>
                 </aside>
             </div>
+        </div>
+    </section>
+    <!----------------------------------------------faq section -------------------------------->
+    <section id="faq" class="oldWayStyles">
+        <div class="container oldNewContainer">
+            <!-- main heading  -->
+            <aside class="main_heading">
+                <h2 class="section_heading mb-0 bold text-dark text-left s_h_l">FAQ's</h2>
+                <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block">
+                    <span>Quick answer to common questions</span>
+                </h4>
+            </aside>
+            <!-- accordion list  -->
+            <aside class="accordionList">
+                <div class="accordion" id="faqList">
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">What is included in the service plan?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">How much does it cost per endpoint?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">What is the term of the contract?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">Will you take the time to understand our unique needs?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">Is it worth the cost?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingSix">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">What if we are small and don't need "the cloud"?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingSeven">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">What if we don't need that much high tech...</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingEight">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">What if we have an existing IT Department?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                    <!-- accordion item  -->
+                    <div class="accordion-item main_heading" >
+                        <h2 class="accordion-header" id="headingNine">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <h4 class="section_description mb-0 text-dark d-flex flex-column d-sm-block" style="margin-top: 0px!important;">
+                                <span class="semiBold">Can you help us protect our business from ransomware?</span>
+                            </h4>
+                        </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#faqList">
+                        <div class="accordion-body">
+                           <h4 class="section_description mb-0 regular text-dark d-flex flex-column d-sm-block">
+                                <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</span>
+                            </h4>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </aside>
         </div>
     </section>
     <!-- js file  -->
