--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
                             </div>
                         </a>
                         <!-- toggle button  -->
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
                             <div class="navbar-icon">
-                                <img src="./img/icon/dots-menu.png" alt="dot menu">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 276.167 276.167" style="enable-background:new 0 0 512 512" xml:space="preserve">
+                                    <g fill="#fff" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M33.144 2.471C15.336 2.471.85 16.958.85 34.765s14.48 32.293 32.294 32.293 32.294-14.486 32.294-32.293S50.951 2.471 33.144 2.471zM137.663 2.471c-17.807 0-32.294 14.487-32.294 32.294s14.487 32.293 32.294 32.293c17.808 0 32.297-14.486 32.297-32.293S155.477 2.471 137.663 2.471zM243.873 67.059c17.804 0 32.294-14.486 32.294-32.293S261.689 2.471 243.873 2.471s-32.294 14.487-32.294 32.294 14.489 32.294 32.294 32.294zM32.3 170.539c17.807 0 32.297-14.483 32.297-32.293 0-17.811-14.49-32.297-32.297-32.297S0 120.436 0 138.246c0 17.81 14.493 32.293 32.3 32.293zM136.819 170.539c17.804 0 32.294-14.483 32.294-32.293 0-17.811-14.478-32.297-32.294-32.297-17.813 0-32.294 14.486-32.294 32.297 0 17.81 14.487 32.293 32.294 32.293zM243.038 170.539c17.811 0 32.294-14.483 32.294-32.293 0-17.811-14.483-32.297-32.294-32.297s-32.306 14.486-32.306 32.297c0 17.81 14.49 32.293 32.306 32.293zM33.039 209.108c-17.807 0-32.3 14.483-32.3 32.294 0 17.804 14.493 32.293 32.3 32.293s32.293-14.482 32.293-32.293-14.486-32.294-32.293-32.294zM137.564 209.108c-17.808 0-32.3 14.483-32.3 32.294 0 17.804 14.487 32.293 32.3 32.293 17.804 0 32.293-14.482 32.293-32.293s-14.489-32.294-32.293-32.294zM243.771 209.108c-17.804 0-32.294 14.483-32.294 32.294 0 17.804 14.49 32.293 32.294 32.293 17.811 0 32.294-14.482 32.294-32.293s-14.49-32.294-32.294-32.294z" data-original="#000000"/>
+                                    </g>
+                                </svg>
                             </div>
                         </button>
                         <!-- navbar list  -->
-                        <div class="collapse navbar-collapse justify-content-end flex-grow-0 w-lg-65 w-xl-60 w-xxl-55" id="topNavbar">
+                        <div class="collapse navbar-collapse no-transition justify-content-end flex-grow-0 w-lg-65 w-xl-60 w-xxl-55" id="topNavbar">
                             <ul class="navbar-nav me-auto mb-lg-0 p-4 bg-white rounded p-lg-0 flex-fill align-items-lg-center mt-3">
                                 <!-- nav link  -->
                                 <li class="nav-item flex-lg-fill text-center">
@@ -450,7 +454,7 @@
         </div>
     </section>
     <!-- ----------------------------------------- zero tech arrogance ----------------------------->
-    <section id="zeroTech" class="">
+    <section id="zeroTech">
         <div class="container btn_description_container py-5 d-lg-flex justify-content-lg-end">
             <!-- left right wrapper  -->
             <div class="left_right_wrapper">
@@ -695,7 +699,7 @@
         </div>
     </section>
     <!-- ----------------------------------------- iddentefy 3 bottleck ----------------------------->
-    <section id="iddentefy3Bottleck" class="">
+    <section id="iddentefy3Bottleck">
         <div class="container btn_description_container py-5 d-lg-flex justify-content-lg-end">
             <!-- left right wrapper  -->
             <div class="left_right_wrapper">
