module added and about-us page initialized

--- a/landing-page.html
+++ b/landing-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./vendor/bootstrap/bootstrapCustom.width.css">
     <!-- custom style  -->
-    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <!-- header and main section wrapper -->
