main section cards initialized

--- a/about-us.html
+++ b/about-us.html
@@ -10,13 +10,11 @@
     <!-- custom style  -->
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-    <!-- header and main section wrapper -->
-    <div id="main__sec__wrapper" class="pb-xxl-5">
-        <!-- border-top  -->
-        <div id="border__top"></div>
-            <!-- header section  ------------------------->
-            <header>
+<body class="about-us">
+    <!-- border-top  -->
+    <div id="border__top"></div>
+    <!-- header section  ------------------------->
+    <header>
                 <!-- navbar  -->
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container py-4">
@@ -60,114 +58,87 @@
                         </div>
                     </div>
                 </nav>
-            </header>
-            <!-- main section  ------------------------->
-            <main>
-                <div class="container pb-3 pb-xl-4 pb-xxl-5" id="mainContainer">
-                        <!-- heading and forms  -->
-                        <aside class="heading_form pb-sm-5 pb-lg-0">
-                            <h6 class="smb s_head_ti">for smb's since 1998</h6>
-                            <!-- main heading wrapper  -->
-                            <div class="m_head_wrap mt-lg-1">
-                                <h1 class="text-white mb-0 text-capitalize">Enabling</h1>
-                                <h1 class="text-white mb-0 text-normal">Enterprise-Grade IT</h1>
-                            </div>
-                            <!-- small heading wrapper  -->
-                            <div class="sm_head_wrap mt-1 mt-lg-2">
-                                <h3 class="text-white mb-0 regular">Let us worry about tech,</h3>
-                                <h3 class="text-white mb-0 regular">so you can <span class="bold_m semiBold">start innovating.</span></h3>
-                            </div>
-                            <!--  email form  -->
-                            <div class="email__form d-flex flex-column mt-3 flex-sm-row w-lg-58 w-xl-52 w-xxl-56 mt-lg-4">
-                                <!-- email input  -->
-                                <input class="w-xs-100 form-control bg-white text-dark-500 text-capitalize medium" type="email" value="" placeholder="Your Email">
-                                <button class="btn cus__btn w-xs-100 mt-2 mt-sm-0 text-capitalize">60 min fee consultation</button>
-                            </div>
-                            <!-- bottom slogan  -->
-                            <div class="slogan__wrap mt-2 mt-lg-3 d-lg-flex">
-                                <p class="para text-end text-blue mb-0">Find out how a typical</p>
-                                <p class="para text-end text-blue mb-0">strategy consultation works.</p>
-                            </div>
-                        </aside>
-                        <!-- card wrapper  -->
-                        <div id="card__wrap">
-                            <!-- card element     -->
-                            <aside class="card__element d-none d-lg-block">
-                                <!-- icon  -->
-                                <div class="icon_wrap text-left">
-                                    <img class="d-inline-block" src="./img/icon/main/graph.png" alt="graph icon">
-                                </div>
-                                <!-- heading  -->
-                                <div class="heading mt-2">
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">business</h6>
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">software</h6>
-                                </div>
-                                <!-- paragraph  -->
-                                <div class="para_wrap mt-1">
-                                    <p class="mb-0 sm_para text-left text-white regular">Software packages</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">created specifically for</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">your Business Goals</p>
-                                </div>
-                            </aside>
-                            <!-- card element     -->
-                            <aside class="card__element d-none d-lg-block">
-                                <!-- icon  -->
-                                <div class="icon_wrap text-left">
-                                    <img class="d-inline-block" src="./img/icon/main/resize.png" alt="resize icon">
-                                </div>
-                                <!-- heading  -->
-                                <div class="heading mt-2">
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">systems</h6>
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">integration</h6>
-                                </div>
-                                <!-- paragraph  -->
-                                <div class="para_wrap mt-1">
-                                    <p class="mb-0 sm_para text-left text-white regular">Ensuring all your</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">systems</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">work in unison</p>
-                                </div>
-                            </aside>
-                            <!-- card element     -->
-                            <aside class="card__element d-none d-lg-block">
-                                <!-- icon  -->
-                                <div class="icon_wrap text-left">
-                                    <img class="d-inline-block" src="./img/icon/main/web-apps.png" alt="graph icon">
-                                </div>
-                                <!-- heading  -->
-                                <div class="heading mt-2">
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">custom</h6>
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">web apps</h6>
-                                </div>
-                                <!-- paragraph  -->
-                                <div class="para_wrap mt-1">
-                                    <p class="mb-0 sm_para text-left text-white regular">Expanding your range of</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">online services: custom</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">workflows, client portals</p>
-                                </div>
-                            </aside>
-                            <!-- card element     -->
-                            <aside class="card__element d-none d-lg-block">
-                                <!-- icon  -->
-                                <div class="icon_wrap text-left">
-                                    <img class="d-inline-block" src="./img/icon/main/circle.png" alt="graph icon">
-                                </div>
-                                <!-- heading  -->
-                                <div class="heading mt-2">
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">Peace of</h6>
-                                    <h6 class="mb-0 text-left text-white text-capitalize semiBold">mind</h6>
-                                </div>
-                                <!-- paragraph  -->
-                                <div class="para_wrap mt-1">
-                                    <p class="mb-0 sm_para text-left text-white regular">Minimize of downtime via</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">high availablity solutions</p>
-                                    <p class="mb-0 sm_para text-left text-white regular">for critical services.</p>
-                                </div>
-                            </aside>
+    </header>
+    <!-- main section  ------------------------->
+    <main>
+        <div class="container pb-3 pb-xl-4 pb-xxl-5">
+                <!-- heading and forms  -->
+                <aside class="head_form pb-sm-5 pb-lg-0">
+                    <h6 class="smb s_head_ti">for smb's since 1998</h6>
+                    <!-- main heading wrapper  -->
+                    <div class="m_head_wrap mt-lg-1">
+                        <h1 class="high-1">Enabling</h1>
+                        <h1 class="high-1">Enterprise-Grade IT</h1>
+                    </div>
+                    <!-- small heading wrapper  -->
+                    <h2 class="batch-mark-des-big mt-2 mt-lg-3">With Friendly,<span> respectful IT experts. </span></h2>
+                    <!--  email form  -->
+                    <div class="email__form d-flex flex-column mt-3 flex-sm-row w-lg-58 w-xl-52 w-xxl-56 mt-lg-4">
+                        <!-- email input  -->
+                        <input class="w-xs-100 form-control bg-white text-dark-500 text-capitalize medium" type="email" value="" placeholder="Your Email">
+                        <button class="btn cus__btn w-xs-100 mt-2 mt-sm-0 text-capitalize">60 min fee consultation</button>
+                    </div>
+                    <!-- bottom slogan  -->
+                    <div class="slogan__wrap mt-2 mt-lg-3 d-lg-flex">
+                        <p class="para text-end text-blue mb-0">Find out how a typical</p>
+                        <p class="para text-end text-blue mb-0">strategy consultation works.</p>
+                    </div>
+                </aside>
+                <!-- card wrapper  -->
+                <div id="card_wrap">
+                    <!-- card element     -->
+                    <aside class="card d-none d-lg-block">
+                        <!-- icon  -->
+                        <div class="icon_wrap text-left">
+                            <img class="d-inline-block" src="./img/icon/main/graph.png" alt="graph icon">
                         </div>
-                        
+                        <!-- heading  -->
+                        <div class="heading mt-2">
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">our promise</h6>                        </div>
+                        <!-- paragraph  -->
+                        <div class="para_wrap mt-1">
+                            <p class="mb-0 sm_para text-left text-white regular">Why unipoint exists</p>
+                            <p class="mb-0 sm_para text-left text-white regular">and our Core</p>
+                            <p class="mb-0 sm_para text-left text-white regular">Values</p>
+                        </div>
+                    </aside>
+                    <!-- card element     -->
+                    <aside class="card d-none d-lg-block">
+                        <!-- icon  -->
+                        <div class="icon_wrap text-left">
+                            <img class="d-inline-block" src="./img/icon/main/resize.png" alt="resize icon">
+                        </div>
+                        <!-- heading  -->
+                        <div class="heading mt-2">
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">our founder's</h6>
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">manifesto</h6>
+                        </div>
+                        <!-- paragraph  -->
+                        <div class="para_wrap mt-1">
+                            <p class="mb-0 sm_para text-left text-white regular">our founder's</p>
+                            <p class="mb-0 sm_para text-left text-white regular">mission and vision</p>
+                        </div>
+                    </aside>
+                    <!-- card element     -->
+                    <aside class="card d-none d-lg-block">
+                        <!-- icon  -->
+                        <div class="icon_wrap text-left">
+                            <img class="d-inline-block" src="./img/icon/main/web-apps.png" alt="graph icon">
+                        </div>
+                        <!-- heading  -->
+                        <div class="heading mt-2">
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">why work with us</h6>
+                        </div>
+                        <!-- paragraph  -->
+                        <div class="para_wrap mt-1">
+                            <p class="mb-0 sm_para text-left text-white regular">some of the benifits</p>
+                            <p class="mb-0 sm_para text-left text-white regular">you'll get for working</p>
+                            <p class="mb-0 sm_para text-left text-white regular">with us as a client's</p>
+                        </div>
+                    </aside>
                 </div>
-            </main>
-    </div>
+        </div>
+    </main>
       <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
