main section complete for lg screen

--- a/about-us.html
+++ b/about-us.html
@@ -64,16 +64,15 @@
         <div class="container pb-3 pb-xl-4 pb-xxl-5">
                 <!-- heading and forms  -->
                 <aside class="head_form pb-sm-5 pb-lg-0">
-                    <h6 class="smb s_head_ti">for smb's since 1998</h6>
                     <!-- main heading wrapper  -->
                     <div class="m_head_wrap mt-lg-1">
-                        <h1 class="high-1">Enabling</h1>
-                        <h1 class="high-1">Enterprise-Grade IT</h1>
+                        <h1 class="high-1 text-capitalize">merging advanced</h1>
+                        <h1 class="high-1 text-capitalize">technology</h1>
                     </div>
                     <!-- small heading wrapper  -->
                     <h2 class="batch-mark-des-big mt-2 mt-lg-3">With Friendly,<span> respectful IT experts. </span></h2>
                     <!--  email form  -->
-                    <div class="email__form d-flex flex-column mt-3 flex-sm-row w-lg-58 w-xl-52 w-xxl-56 mt-lg-4">
+                    <div class="email__form d-flex flex-column mt-3 flex-sm-row w-lg-75 w-xl-52 w-xxl-56 mt-lg-4">
                         <!-- email input  -->
                         <input class="w-xs-100 form-control bg-white text-dark-500 text-capitalize medium" type="email" value="" placeholder="Your Email">
                         <button class="btn cus__btn w-xs-100 mt-2 mt-sm-0 text-capitalize">60 min fee consultation</button>
@@ -85,9 +84,9 @@
                     </div>
                 </aside>
                 <!-- card wrapper  -->
-                <div id="card_wrap">
+                <div class="card_wrap">
                     <!-- card element     -->
-                    <aside class="card d-none d-lg-block">
+                    <aside class="card-square d-none d-lg-grid">
                         <!-- icon  -->
                         <div class="icon_wrap text-left">
                             <img class="d-inline-block" src="./img/icon/main/graph.png" alt="graph icon">
@@ -103,7 +102,7 @@
                         </div>
                     </aside>
                     <!-- card element     -->
-                    <aside class="card d-none d-lg-block">
+                    <aside class="card-square d-none d-lg-grid">
                         <!-- icon  -->
                         <div class="icon_wrap text-left">
                             <img class="d-inline-block" src="./img/icon/main/resize.png" alt="resize icon">
@@ -120,7 +119,7 @@
                         </div>
                     </aside>
                     <!-- card element     -->
-                    <aside class="card d-none d-lg-block">
+                    <aside class="card-square d-none d-lg-grid">
                         <!-- icon  -->
                         <div class="icon_wrap text-left">
                             <img class="d-inline-block" src="./img/icon/main/web-apps.png" alt="graph icon">
