--- a/about-us.html
+++ b/about-us.html
@@ -138,7 +138,108 @@
                 </div>
         </div>
     </main>
-      <!-- ---------------------------------------- footer section   ----------------------------------------  -->
+    <!-- our north star --------------------------------->
+    <section id="ourNorthStar">
+        <div class="container">
+            <!-- section heading  -->
+            <div class="section-heading">
+                <h1 class="text-dark text-center text-capitalize high-2">our north stars</h1>
+                <h4 class="text-center text-dark description-2">Why we do what we do.</h4>
+            </div>
+        </div>
+        <!-- fix it before breaks section  -->
+        <section id="fixItBeforeItBreaks" class="py-5">
+            <div class="container quote_heading_cardList_container py-3 py-xl-4 py-xxl-5">
+                <!-- main heading  -->
+                <aside class="main_heading">
+                    <h6 class="smb big_s_head_ti">trustworthy</h6>
+                    <h2 class="section_heading mt-lg-2 mt-xl-3 mb-0 bold text-dark text-capitalize text-left s_h_l">lasting partnership</h2>
+                    <h4 class="section_description mb-0 medium text-dark d-flex flex-column d-sm-block description-2">
+                        <span>It's all a matter of when.</span>
+                    </h4>
+                </aside>
+                <!-- quotes  -->
+                <aside class="quotes d-none d-lg-grid">
+                    <p class="texts text-start mb-0">
+                        <span class="quote_text blue mb-0 d-inline d-sm-block regular">"The best way to be trustworthy is to</span>
+                        <span class="quote_text blue mb-0 d-inline d-sm-block regular">start trusting"</span>                    </p>
+                    <h4 class="quotes_owner blue text-uppercase text-start semiBold">ceo</h4>
+                </aside>
+                <!-- cards  -->
+                <section class="visual_card_list shaveCard mt-4">
+                    <!-- shave of tittle section  -->
+                    <aside class="shaveOffSection visual_card">
+                        <h3 class="tittle">
+                            <span>Transparent</span>
+                            <span>Support</span>
+                        </h3>
+                        <!-- description  -->
+                        <p class="description-3 mt-3">For growing SMB's</p>
+                        <!-- button  -->
+                        <a href="" class="cus__btn text-normal text-decoration-none mt-0 d-lg-inline-block">Free Strategy Session</a>
+                    </aside>
+                    <!-- visual cards  -->
+                    <aside class="visual_card bg-blue workload">
+                        <!-- image  -->
+                        <div class="icon_wrap tittle"><img src="./img/about-us/trustworthy/respectful.svg" alt="respectful icon"></div>
+                        <!-- tittle  -->
+                        <h1 class="text-white tittle text-capitalize">respectful</h1>
+                        <!-- texts  -->
+                        <p class="para">
+                            <span>At unipoint, any kind of question is a </span>
+                            <span>great question. We understand that you </span>
+                            <span>are an expert in what you do, and we are </span>
+                            <span>an expert in what we do.</span>
+                        </p>
+                    </aside>
+                    <!-- visual cards  -->
+                    <aside class="visual_card openSource bg-lateWhite">
+                        <!-- image  -->
+                        <div class="icon_wrap"><img src="./img/about-us/trustworthy/friendly.svg" alt="friendly and personal icon"></div>
+                        <!-- tittle  -->
+                        <h1 class="text-dark tittle text-capitalize">friendly and personable</h1>
+                        <!-- texts  -->
+                        <p class="para text-dark">
+                            <span>We don't just give answers. We plan to </span>
+                            <span>make our clients feel understood and  </span>
+                            <span>comfortable, while we take care of their IT </span>
+                            <span>problems.</span>
+                        </p>
+                    </aside>
+                    <!-- visual cards  -->
+                    <aside class="visual_card cloud bg-lateWhite">
+                        <!-- image  -->
+                        <div class="icon_wrap"><img src="./img/about-us/trustworthy/caring.svg" alt="caring icon"></div>
+                        <!-- tittle  -->
+                        <h1 class="tittle text-capitalize text-dark">caring</h1>
+                        <!-- texts  -->
+                        <p class="para text-dark">
+                            <span>Plain and simple, we worry when our </span>
+                            <span>clients are under attack. For us, it's not </span>
+                            <span>just about "getting new business", it's </span>
+                            <span>about having empathy in times of need.</span>
+                        </p>
+                    </aside>
+                    <!-- visual cards  -->
+                    <aside class="visual_card awarness bg-yellow">
+                        <!-- image  -->
+                        <div class="icon_wrap"><img src="./img/icon/all-system/cloud.png" alt="cloud icon"></div>
+                        <!-- tittle  -->
+                        <h1 class="tittle text-capitalize text-dark">strategic partners</h1>
+                        <!-- texts  -->
+                        <p class="para text-dark">
+                            <span>Good strategy doesn't happen overnight. We </span>
+                            <span>always ask our clients: "Where do you see your </span>    
+                            <span>industry in 1 year, 5 years, 10 years?", and then </span>
+                            <span>we show them the technology that will help </span>
+                            <span>get them there. </span>
+                        </p>
+                    </aside>
+                </section>
+            </div>
+        </section>
+    </section>
+    <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
             <!-- left side  -->
