family and folks section complete

--- a/about-us.html
+++ b/about-us.html
@@ -239,6 +239,58 @@
             </div>
         </section>
     </section>
+    <!-- friendly folks section -------------------------------  -->
+    <section id="friendlyFolks">
+        <div class="container btn_description_container py-5 d-lg-flex justify-content-lg-end">
+            <!-- left right wrapper  -->
+            <div class="left_right_wrapper">
+                <!-- left section  -->
+                <div class="left_section">
+                    <!-- main heading  -->
+                    <aside class="main_heading">
+                        <h6 class="text-uppercase medium small_section_heading">apply for a <span class="center-bg text-normal"> 1-on-1, FREE 60 MIN </span>consultation</h6>
+                        <h2 class="section_heading mb-0 bold text-dark s_h_l mt-lg-2">Friendly Folks</h2>
+                        <h2 class="section_heading mb-0 bold text-dark s_h_l mt-lg-2">At your Service</h2>
+                    </aside>
+                    <!-- texts and buttons  -->
+                    <aside class="text__buttons mt-3 mt-lg-0 pt-lg-3">
+                        <!-- sample image  -->
+                        <div class="img_container d-none d-lg-block">
+                            <img class="w-lg-100 d-block" src="./img/btn & sections/email-sample.jpg" alt="email screenshort">
+                        </div>
+                        <!-- left texts  -->
+                        <div class="text_btn_wrap">
+                            <!-- texts  -->
+                            <div class="texts mb-lg-0 order-sm-2">
+                                <h6 class="button_description medium blue btn_txt_medium mb-0">Pick our braings for a full 
+                                    <a href="" class="bold blue text-decoration-none d-sm-block">60 Minute Session -></a>
+                                </h6>
+                            </div>
+                            <!-- button  -->
+                            <a href="" class="strategy_btn text-center text-capitalize me-3 me-xxl-4">free strategy session</a>
+                        </div>
+                    </aside>
+                </div>
+                <!-- schedule meeting lists  -->
+                <aside class="right_section">
+                    <!-- image wrap  -->
+                    <div class="img_wrap brand_img_wrap">
+                        <img src="./img/brand.svg" alt="brand logo">
+                    </div>
+                    <!-- texts  -->
+                    <p class="para mt-lg-3 right_details">
+                        <span class="d-block mb-0">Just use the Calendly embed</span>
+                        <span class="d-block mb-0">below to book your time.</span>
+                    </p>
+                    <!-- image container  -->
+                    <div class="img_wrap content_img mt-lg-4">
+                        <img src="./img/btn & sections/sceduling-lists.jpg" alt="sceduling list img">
+                    </div>
+                </aside>
+            </div>
+        </div>
+    </section>
+    <!-- our founder section ---------------------------------------------  -->
     <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
